Fix vote counter getting squished

--- a/src/components/UI/BoardComponents/Card/components/Voting.scss
+++ b/src/components/UI/BoardComponents/Card/components/Voting.scss
@@ -1,10 +1,6 @@
 #vote-container {
-  .flex-row {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-  }
   .vote-thumbs-container {
+    align-items: center;
     .vote-tracker {
       height: 20px;
       padding: 3px 5px;
@@ -14,6 +10,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      span {
+        white-space: nowrap;
+      }
     }
     .vote-counter {
       cursor: pointer;
