--- a/src/index.scss
+++ b/src/index.scss
@@ -38,7 +38,6 @@ body {
 
   .row {
     display: flex;
-    flex-grow: 1;
     flex-direction: row;
   }
 
